# linkme

./: .travis.yml  Cargo.toml  README.md  WASM.md  build.rs
.github/workflows/: ci.yml
impl/: Cargo.toml  build.rs
impl/src/: args.rs  attr.rs  common.rs  declaration.rs  derive.rs  element.rs  lib.rs  linker.rs  ty.rs
impl/src/singleton/: declaration.rs  item.rs  mod.rs
impl/src/slice/: declaration.rs  mod.rs
src/: disjointed_static.rs  distributed_slice.rs  lib.rs  private.rs  ptr.rs
tests/: custom_linkme_path.rs  custom_linkme_path_with_function.rs  disjointed_static.rs  distributed_slice.rs  example.rs  fn_element.rs  module_2015.rs  module_2021.rs  readme.rs  win_status_access_violation.rs  win_status_illegal_instruction.rs
tests/cortex/: Cargo.toml  memory.x
tests/cortex/.cargo/: config.toml
tests/cortex/src/: main.rs
tests/crate/: Cargo.toml  test.rs
tests/module/: mod.rs
tests/ui/: attempted_coercion.rs  attempted_coercion.stderr  bad_crate_path.rs  bad_crate_path.stderr  generic_fn.rs  generic_fn.stderr  mismatched_types.rs  mismatched_types.stderr  mutable.rs  mutable.stderr  single_crate_dupe.rs  single_crate_dupe.stderr  static_elision.rs  static_elision.stderr  unsupported_item.rs  unsupported_item.stderr  zerosized.rs  zerosized.stderr
