[package]
name = "linkme"
version = "0.3.5"
authors = ["David Tolnay <dtolnay@gmail.com>"]
categories = ["development-tools::build-utils", "development-tools::procedural-macro-helpers", "no-std"]
description = "Safe cross-platform linker shenanigans"
documentation = "https://docs.rs/linkme"
edition = "2021"
keywords = ["linkage"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/dtolnay/linkme"
rust-version = "1.62"

[[test]]
name = "module_2015"
edition = "2015"

[features]
used_linker = ["linkme-impl/used_linker"]

[dependencies]
linkme-impl = { version = "=0.3.5", path = "impl" }

[dev-dependencies]
rustversion = "1.0"
trybuild = { version = "1.0.66", features = ["diff"] }

[workspace]
members = ["impl", "tests/cortex", "tests/crate"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
