[package]
name = "linkme"
version = "0.3.33"
authors = ["David Tolnay <dtolnay@gmail.com>"]
categories = ["development-tools::build-utils", "development-tools::procedural-macro-helpers", "no-std", "no-std::no-alloc"]
description = "Safe cross-platform linker shenanigans"
documentation = "https://docs.rs/linkme"
edition = "2021"
keywords = ["linkage"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/dtolnay/linkme"
rust-version = "1.62"

[[test]]
name = "module_2015"
edition = "2015"

[features]
used_linker = ["linkme-impl/used_linker"]

[dependencies]
linkme-impl = { version = "=0.3.33", path = "impl" }

[dev-dependencies]
once_cell = "1.16"
rustversion = "1.0"
trybuild = { version = "1.0.97", features = ["diff"] }

[workspace]
members = ["impl", "tests/cortex", "tests/crate"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = [
    "--generate-link-to-definition",
    "--extern-html-root-url=core=https://doc.rust-lang.org",
    "--extern-html-root-url=alloc=https://doc.rust-lang.org",
    "--extern-html-root-url=std=https://doc.rust-lang.org",
]
