[package]
name = "linkme-impl"
version = "0.3.0"
authors = ["David Tolnay <dtolnay@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Implementation detail of the linkme crate"
repository = "https://github.com/dtolnay/linkme"
documentation = "https://docs.rs/linkme"
edition = "2021"
rust-version = "1.62"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.2"
quote = "1.0"
syn = "1.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
