[package]
name = "linkme-impl"
version = "0.3.18"
authors = ["David Tolnay <dtolnay@gmail.com>"]
description = "Implementation detail of the linkme crate"
documentation = "https://docs.rs/linkme"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dtolnay/linkme"
rust-version = "1.62"

[lib]
proc-macro = true

[features]
used_linker = []

[dependencies]
proc-macro2 = "1.0.63"
quote = "1.0.29"
syn = "2.0.23"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--generate-link-to-definition"]
