[package]
name = "linkme-impl"
version = "0.3.33"
authors = ["David Tolnay <dtolnay@gmail.com>"]
description = "Implementation detail of the linkme crate"
documentation = "https://docs.rs/linkme"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dtolnay/linkme"
rust-version = "1.62"

[lib]
proc-macro = true

[features]
used_linker = []

[dependencies]
proc-macro2 = "1.0.74"
quote = "1.0.35"
syn = "2.0.46"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = [
    "--generate-link-to-definition",
    "--extern-html-root-url=core=https://doc.rust-lang.org",
    "--extern-html-root-url=alloc=https://doc.rust-lang.org",
    "--extern-html-root-url=std=https://doc.rust-lang.org",
    "--extern-html-root-url=proc_macro=https://doc.rust-lang.org",
]
