[package]
name = "cortex-m-linkme-test"
version = "0.0.0"
edition = "2018"
publish = false

[dependencies]
cortex-m = "0.6"
cortex-m-rt = { git = "https://github.com/rust-embedded/cortex-m-rt" }
cortex-m-semihosting = "0.3"
linkme = { path = "../.." }
panic-semihosting = { version = "0.5", features = ["exit"] }
