[package]
name = "cortex-m-linkme-test"
version = "0.0.0"
authors = ["David Tolnay <dtolnay@gmail.com>"]
edition = "2021"
publish = false

[features]
used_linker = ["linkme/used_linker"]

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
cortex-m-semihosting = "0.5"
linkme = { path = "../.." }
panic-semihosting = { version = "0.6", features = ["exit"] }
